print.css: Make superscripts half size and position them correctly
Before this commit, superscripts in print adopt the sweeping body {
font-size: 12px; } rule, making them too large and protruding.

--- a/source/css/print.css
+++ b/source/css/print.css
@@ -3,6 +3,11 @@ body {
     font-size: 12px;
 }
 
+sup {
+    font-size: 0.5em;
+    top: -1em;
+}
+
 pre {
     -webkit-print-color-adjust: exact;
 }
